tests/ui/rfcs/rfc-2632-const-trait-impl/const-closure-trait-method-fail.stderr
error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closure-trait-method-fail.rs:14:39
   |
LL | const fn need_const_closure<T: ~const FnOnce(()) -> i32>(x: T) -> i32 {
   |                                       ^^^^^^^^^^^^^^^^^

error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/const-closure-trait-method-fail.rs:15:5
   |
LL |     x(())
   |     ^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: consider further restricting this bound
   |
LL | const fn need_const_closure<T: ~const FnOnce(()) -> i32 + ~const std::ops::FnOnce<((),)>>(x: T) -> i32 {
   |                                                         ++++++++++++++++++++++++++++++++
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
